<resources>
    <string name="app_name">Event Facility</string>
    <string name="n_o_tem_conta">Não tem conta?</string>
    <string name="cadastre_se">Cadastre-se!</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="entrar">entrar</string>
    <string name="cadastrar">cadastrar</string>
    <string name="repita_a_senha">Repita a senha</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="adicionar_evento">Adicionar evento</string>
    <string name="tipo_do_evento">Tipo do evento</string>
    <string name="local_do_evento">Local do evento</string>
    <string name="inicio_termino_11_00_22_00">Inicio/Termino (11:00/22:00)</string>
    <string name="nome_do_evento">Nome do evento</string>
    <string name="dd_mm_aaaa">DD-MM-AAAA</string>
    <string name="maximo_de_inscritos">Maximo de inscritos</string>
    <string name="data">Data: </string>
    <string name="tipo_de_atividade">Tipo de atividade:</string>
    <string name="palestra">Palestra</string>
    <string name="minicurso">Minicurso</string>
    <string name="mesa_redonda">Mesa Redonda</string>
    <string name="descri_o">Descrição</string>
    <string name="valor">Valor</string>
    <string name="adicionar_atividade">Adicionar Atividade</string>
    <string name="hora_de_inicio">Hora de inicio:</string>
    <string name="preencher_campos">Preencha todos os campos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="desconto">Porcentagem de desconto</string>
    <string name="quantidade_de_cupons">Quantidade de cupons</string>


    <string-array name="porcentagens">
        <item>5%</item>
        <item>25%</item>
        <item>50%</item>
    </string-array>

    <string-array name="local">
        <item>Prédio</item>
        <item>Sala</item>
        <item>Auditorio</item>
        <item>Laboratório</item>
    </string-array>

</resources>
